--- a/themes/zen-theme/layout/post.ejs
+++ b/themes/zen-theme/layout/post.ejs
@@ -1,1 +1,9 @@
-<h1> This is a post </h1>
+<link rel="stylesheet" href="/css/post.css">
+
+<h1 id="page-title">
+	<%- page.title %>
+</h1>
+
+<div id="page-content">
+	<%- page.content %>
+</div>
