--- a/themes/zen-theme/layout/layout.ejs
+++ b/themes/zen-theme/layout/layout.ejs
@@ -1,8 +1,10 @@
 <html>
 	<meta charset="UTF-8">
+	<%- partial('_partial/header') %>
 	<body>
-		<%- partial('_partial/header') %>
-		<%- body %>
+		<div class="content">
+			<%- body %>
+		</div>
 		<%- partial('_partial/footer') %>
 	</body>
 </html>
