--- a/themes/zen-theme/source/css/post.css
+++ b/themes/zen-theme/source/css/post.css
@@ -4,3 +4,33 @@ img {
     width: auto;
     height: auto;
 }
+
+
+.monitor {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    background-color: grey;
+    border-radius: 15px;
+    perspective: 600px;
+  }
+  
+  .screen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    border-radius: 10px;
+    transform: rotateY(-20deg);
+  }
+  
+  .side {
+    position: absolute;
+    right: -50px;
+    top: 0;
+    width: 50px;
+    height: 100%;
+    background: linear-gradient(to left, rgba(0,0,0,0.1), rgba(0,0,0,0.5));
+    border-radius: 0 5px 5px 0;
+  }
+
