--- a/themes/zen-theme/layout/_partial/header.ejs
+++ b/themes/zen-theme/layout/_partial/header.ejs
@@ -1,9 +1,10 @@
-<link rel="stylesheet" href="/css/style.css">
 <header>
-    <nav>
-        <a href="/" class="header-link">Home</a>
-        <a href="/archives/" class="header-link">Archives</a>
-        <a href="/game/" class="header-link">Game</a>
-        <a href="/about/" class="header-link">About</a>
-    </nav>
+    <div id="header-content">
+        <nav>
+            <a href="/" class="header-link">Home</a>
+            <a href="/archives/" class="header-link">Archives</a>
+            <a href="/game/" class="header-link">Game</a>
+            <a href="/about/" class="header-link">About</a>
+        </nav>
+    </div>
 </header>
