--- a/themes/zen-theme/layout/layout.ejs
+++ b/themes/zen-theme/layout/layout.ejs
@@ -1,10 +1,8 @@
-<html>
 	<meta charset="UTF-8">
 	<%- partial('_partial/header') %>
-	<body>
+	<div id="page-body">
 		<div class="content">
 			<%- body %>
 		</div>
-		<%- partial('_partial/footer') %>
-	</body>
-</html>
+	</div>
+	<%- partial('_partial/footer') %>
