update css file

--- a/themes/zen-theme/source/css/style.css
+++ b/themes/zen-theme/source/css/style.css
@@ -1,87 +1,59 @@
 @import "variable.css";
 
-header nav a {
-    margin-right: 10px;
-    text-decoration: none;
-    color: #000;
-    font-weight: normal;
-	display: flex;
-    justify-content: space-between;
-}
-
-header nav a:hover {
-    color: #6f00ff;
-}
-
-header {
-    width: calc(40.33% - 2px);
-    margin: 0 auto;
-    text-align: left;
-    position: fixed;
-    top: 0;
-    z-index: 9999; /* 可选，用于控制层级 */
-    background-color: #ffffff; /* 设置背景颜色为不透明的白色 */
-    opacity: 1; 
-    border: 2px solid blue;
-    height: var(--header-height);
-    border-bottom: 3px solid black;
-    align-items: center;
-    display: flex;
-}
-
-.header-link {
-    display: inline-block;
-    margin-right: 10px;
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-    font-size: 1.5em;
-}
 
 html {
     height: 100%;
 }
 
-body {
-    width: calc(40.33% - 2px);
-    height: 100%;
-    margin: 0 auto;
-    border: 2px solid blue;
+body{
+    margin: 0;
+}
+
+#page-body {
+    width: 100%;
+    height: auto;
+    background-color: black;
+    background-image: url("/images/anno1800-america.jpeg");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .content {
+    margin: 0 auto;
+    width: calc(40.33% - 2px);
     min-height: calc(100% - 40px);
+    background-color: white;
     padding-bottom: 0px;
+    z-index: 1;
 }
 
-#page-footer {
-    position: sticky;
-    height: 40px;
-    text-align: center;
-}
+
 
 .hidden {
     display: none;
 }
 
-#white-box {
-    height: calc(var(--header-height) + 10px);
+
+#crt-monitor {
+        margin: 0 auto;
+  background-color: black;
+  border-radius: 10px;
+  width: 80%;
+  padding-top: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-.matrix-div {
-    background-color: black;
-    color: lime;
-    font-family: 'Courier New', monospace;
-    font-size: 14px;
-    line-height: 1.5;
-    padding: 20px;
-    white-space: pre;
-    overflow: auto;
-    height: 400px; /* 自定义高度 */
+.crt-screen {
+  background-color: #000000;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1);
+  height: 100%;
+  padding: 20px;
 }
 
 #http-connect {
   font-family: 'Courier New', monospace;
+  color: green;
   font-size: 14px;
   line-height: 1.5;
 }
@@ -97,7 +69,6 @@ body {
 }
 
 #article-list {
-    margin-bottom: 50px;
     padding: 10px;
 }
 
