--- a/themes/zen-theme/source/css/variable.css
+++ b/themes/zen-theme/source/css/variable.css
@@ -1,4 +1,14 @@
 :root {
-    --header-height: 60px
+    --header-height: 160px;
+    --footer-height: 40px;
 }
-  
+
+#white-box {
+    height: calc(var(--header-height) + 10px);
+}
+
+#white-footer-box {
+    height: 50px;
+    background-color: white;
+    z-index: 1;
+}
