--- a/themes/zen-theme/source/css/variable.css
+++ b/themes/zen-theme/source/css/variable.css
@@ -1,6 +1,9 @@
 :root {
-    --header-height: 160px;
+    --header-height: 60px;
+    --header-content-width: 700px; 
+    --index-header-height: 160px;
     --footer-height: 40px;
+    --post-content-width: 700px; 
 }
 
 #white-box {
@@ -12,3 +15,15 @@
     background-color: white;
     z-index: 1;
 }
+
+
+@font-face {
+    font-family: 'SourceHan';
+    src: url('/font/SourceHanSerifSC-VF.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Elizabeth';
+    src: url('/font/Elizabeth.ttf') format('truetype');
+}
+
