--- a/themes/zen-theme/source/css/archive.css
+++ b/themes/zen-theme/source/css/archive.css
@@ -1,10 +1,5 @@
-@import url(variable.css);
-img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
-}
+@import "variable.css";
+
 
 html {
     height: 100%;
@@ -18,22 +13,49 @@ body{
     width: 100%;
     height: auto;
     background-color: black;
-    background-size: cover;
+    background-image: url("/images/anno1800-america.jpeg");
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
 .content {
     margin: 0 auto;
-    width: var(--post-content-width);
+    width: calc(40.33% - 2px);
     min-height: calc(100% - 40px);
     background-color: white;
     padding-bottom: 0px;
     z-index: 1;
-    padding: 20px;
 }
+
+
 
 .hidden {
     display: none;
+}
+
+
+#crt-monitor {
+    margin: 0 auto;
+    background-color: black;
+    border-radius: 10px;
+    width: 80%;
+    padding-top: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.crt-screen {
+  background-color: #000000;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1);
+  height: 100%;
+  padding: 20px;
+}
+
+#http-connect {
+  font-family: 'Courier New', monospace;
+  color: green;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
 @keyframes spin {
@@ -83,31 +105,18 @@ body{
     align-items: center; /* 水平居中对齐 */
 }
 
+
 #page-title {
-    font-size: 28px;
-    color: black;
+    font-size: 24px;
+    color: #333;
     font-weight: bold;
     /* 其他样式属性 */
 }
 
 #page-content {
     font-size: 16px;
-    color: black;
-    font-family: 'SourceHan';
+    color: #666;
     /* 其他样式属性 */
-}
-
-h2 {
-    font-size: 20px;
-}
-
-blockquote {
-    background-color: #f5f5f5;
-    border-left: 5px solid #999; 
-    margin: 0px;
-    padding: 10px;
-    padding-left: 15px;
-    font-weight: normal;
 }
 
 #page-footer {
@@ -134,50 +143,37 @@ header nav a:hover {
 }
 
 header {
-    background-color: white;
+    border: 2px solid blue;
     height: var(--header-height);
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
     z-index: 9999; /* 可选，用于控制层级 */
+    background-image: url("/images/stone-floor-texture.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #header-content {
-    width: var(--header-content-width);
+    width: calc(40.33% - 2px);
     margin: 0 auto;
     text-align: left;
     top: 0;
     opacity: 1; 
+    border: 2px solid blue;
     height: var(--header-height);
     border-bottom: 3px solid black;
     align-items: center;
     display: flex;
-    background-color: white;
 }
 
 .header-link {
     display: inline-block;
     margin-right: 10px;
     text-decoration: none;
-    color:  black;
+    color:  #ffc400;
     font-weight: bold;
     font-size: 1.5em;
+    text-shadow: 1px 1px 0px #ffc400;
 }
-
-.url-element {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    border: 1px solid #ccc;
-    padding: 10px;
-  }
-  
-  .left-column {
-    flex-grow: 1;
-  }
-  
-  .right-column img {
-    width: 50px;
-    height: 50px;
-  }
