--- a/themes/zen-theme/source/css/archive.css
+++ b/themes/zen-theme/source/css/archive.css
@@ -13,59 +13,21 @@ body{
     width: 100%;
     height: auto;
     background-color: black;
-    background-image: url("/images/anno1800-america.jpeg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
+    border-bottom: 40px solid #000;
 }
 
 .content {
+    font-family: 'SourceHan';
+    font-size:large;
     margin: 0 auto;
-    width: calc(40.33% - 2px);
+    width: var(--post-content-width);
     min-height: calc(100% - 40px);
     background-color: white;
     padding-bottom: 0px;
     z-index: 1;
-}
-
-
-
-.hidden {
-    display: none;
-}
-
-
-#crt-monitor {
-    margin: 0 auto;
-    background-color: black;
-    border-radius: 10px;
-    width: 80%;
-    padding-top: 20px;
-    overflow: hidden;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.crt-screen {
-  background-color: #000000;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1);
-  height: 100%;
-  padding: 20px;
-}
-
-#http-connect {
-  font-family: 'Courier New', monospace;
-  color: green;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.spinner {
-  display: inline-block;
-  animation: spin 2s infinite linear;
+    padding: 20px;
 }
 
 #article-list {
@@ -121,12 +83,29 @@ body{
 
 #page-footer {
     position: sticky;
-    height: 40px;
+    height: 80px;
     text-align: center;
+    background-color: #bd2a21;
+    min-width: 100%;
+    background-size: cover;
+    border-radius: 0%; 
+    font-family: 'DarahRevolusi';
+}
+
+#time-box {
+    display: flex;
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+    height: 100%;
+}
+
+#page-footer-text {
+    margin: 0px;
 }
 
 #current-utc-time {
     overflow: auto;
+    font-size: 30px;
 }
 
 header nav a {
@@ -143,37 +122,33 @@ header nav a:hover {
 }
 
 header {
-    border: 2px solid blue;
+    background-color: white;
     height: var(--header-height);
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
     z-index: 9999; /* 可选，用于控制层级 */
-    background-image: url("/images/stone-floor-texture.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 #header-content {
-    width: calc(40.33% - 2px);
+    width: calc(var(--header-content-width) + 40px);
     margin: 0 auto;
     text-align: left;
     top: 0;
     opacity: 1; 
-    border: 2px solid blue;
     height: var(--header-height);
-    border-bottom: 3px solid black;
     align-items: center;
     display: flex;
+    background-color: white;
+    border-bottom: 10px solid black;
 }
 
 .header-link {
     display: inline-block;
     margin-right: 10px;
     text-decoration: none;
-    color:  #ffc400;
+    color:  black;
     font-weight: bold;
     font-size: 1.5em;
-    text-shadow: 1px 1px 0px #ffc400;
 }
