--- a/themes/zen-theme/source/css/post.css
+++ b/themes/zen-theme/source/css/post.css
@@ -20,6 +20,7 @@ body{
     background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
+    border-bottom: 40px solid #000;
 }
 
 .content {
@@ -30,57 +31,6 @@ body{
     padding-bottom: 0px;
     z-index: 1;
     padding: 20px;
-}
-
-.hidden {
-    display: none;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.spinner {
-  display: inline-block;
-  animation: spin 2s infinite linear;
-}
-
-#article-list {
-    padding: 10px;
-}
-
-#article-list li {
-    margin-bottom: 5px;
-    position: relative;
-    display: flex; /* 使用 flexbox 布局 */
-    align-items: center; /* 垂直居中对齐 */
-    border: 1px solid blue;
-    padding: 10px;
-}
-
-#article-list li a {
-    border: 1px solid blue;
-    text-decoration: none;
-    flex-grow: 0.2; 
-}
-
-#article-list li .date {
-    margin-left: 5px;
-    margin-right: 10px;
-}
-
-#article-list li hr {
-    border: none;
-    border-top: 1px dashed #000;
-    margin: 0;
-    flex-grow: 1; /* 横线自动拉伸填充剩余空间 */
-}
-
-#article-list li div {
-    flex-grow: 1;
-    display: flex; /* 使用 flexbox 布局 */
-    align-items: center; /* 水平居中对齐 */
 }
 
 #page-title {
@@ -112,12 +62,29 @@ blockquote {
 
 #page-footer {
     position: sticky;
-    height: 40px;
+    height: 80px;
     text-align: center;
+    background-color: #bd2a21;
+    min-width: 100%;
+    background-size: cover;
+    border-radius: 0%; 
+    font-family: 'DarahRevolusi';
+}
+
+#time-box {
+    display: flex;
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+    height: 100%;
+}
+
+#page-footer-text {
+    margin: 0px;
 }
 
 #current-utc-time {
     overflow: auto;
+    font-size: 30px;
 }
 
 header nav a {
@@ -144,17 +111,18 @@ header {
 }
 
 #header-content {
-    width: var(--header-content-width);
+    width: calc(var(--header-content-width) + 40px);
     margin: 0 auto;
     text-align: left;
     top: 0;
     opacity: 1; 
     height: var(--header-height);
-    border-bottom: 3px solid black;
     align-items: center;
     display: flex;
     background-color: white;
+    border-bottom: 10px solid black;
 }
+
 
 .header-link {
     display: inline-block;
@@ -165,19 +133,61 @@ header {
     font-size: 1.5em;
 }
 
-.url-element {
+.site-info-box{
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 95%;
+    margin: 0 auto;
     border: 1px solid #ccc;
     padding: 10px;
+    height: 120px;
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
   
-  .left-column {
-    flex-grow: 1;
-  }
+.left-column {
+  flex-grow: 1;
+}
+
+.left-column {
+  float: left;
+  width: 70%;
+  height: 100%;
+}
+
+.right-column {
+  float: right;
+  width: 25%;
+  height: 100%;
+  text-align: center;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  margin-bottom: 15px;
+  color: #000;
+}
+
+.title:hover {
+    color: gray;
+}
+
+.description {
+  font-size: 16px;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.fqdn {
+  font-size: 14px;
+  color: #666;
+}
+
+.site-info-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
   
-  .right-column img {
-    width: 50px;
-    height: 50px;
-  }
