update css style

--- a/themes/zen-theme/source/css/archive.css
+++ b/themes/zen-theme/source/css/archive.css
@@ -9,29 +9,33 @@ body{
     margin: 0;
 }
 
+
 #page-body {
     width: 100%;
     height: auto;
     background-color: black;
-    background-size: cover;
     background-repeat: no-repeat;
     border-bottom: 40px solid #000;
+    background-image: url(/images/anno1800-boat.jpg);
+    background-size: contain;
+    background-size: 100% auto;
 }
 
 .content {
     font-family: 'SourceHan';
     font-size:large;
     margin: 0 auto;
-    width: var(--post-content-width);
+    width: calc(var(--post-content-width) + 40px);
     min-height: calc(100% - 40px);
-    background-color: white;
     padding-bottom: 0px;
     z-index: 1;
     padding: 20px;
 }
 
 #article-list {
+    width: var(--post-content-width);
     padding: 10px;
+    background-color: white;
 }
 
 #article-list li {
@@ -141,7 +145,6 @@ header {
     align-items: center;
     display: flex;
     background-color: white;
-    border-bottom: 10px solid black;
 }
 
 .header-link {
