--- a/themes/zen-theme/layout/archive.ejs
+++ b/themes/zen-theme/layout/archive.ejs
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="/css/archive.css">
 
-<div></div>
-<div id="white-box"></div>
+<div style="opacity: 0; height: 40px; z-index: 10;"></div>
 <ul id="article-list"></ul>
 
 <script>
