--- a/themes/zen-theme/source/css/index.css
+++ b/themes/zen-theme/source/css/index.css
@@ -24,10 +24,10 @@ body{
 
 
 #crt-monitor {
-        margin: 0 auto;
+  margin: 0 auto;
   background-color: black;
   border-radius: 10px;
-  width: 80%;
+  width: 700px;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
@@ -35,7 +35,7 @@ body{
 .crt-screen {
   background-color: #000000;
   box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.1);
-  height: 100%;
+  height: 80%;
   padding: 10%;
 }
 
@@ -61,12 +61,12 @@ body{
 
 
 header nav a:hover {
-    color: #6f00ff;
+    color: wheat;
 }
 
 header {
     border: 0px solid blue;
-    height: var(--index-header-height);
+    height: 12%;
     width: 100%;
 }
 
@@ -75,7 +75,6 @@ header {
     margin: 0 auto;
     top: 0;
     opacity: 1; 
-    height: var(--index-header-height);
     border-bottom: 4px solid black;
     align-items: center;
     text-align: center;
@@ -105,7 +104,7 @@ header nav a {
     margin-right: 20px;
     text-decoration: none;
     font-weight: 550;
-    font-size: 5.5em;
+    font-size: 4.5em;
     color:  #ffc400;
     text-shadow: 2px 2px 0px black, -2px -3px 0px #000;
 }
