--- a/themes/zen-theme/layout/archive.ejs
+++ b/themes/zen-theme/layout/archive.ejs
@@ -1,7 +1,9 @@
 <link rel="stylesheet" href="/css/archive.css">
 
-<div style="opacity: 0; height: 40px; z-index: 10;"></div>
+<div id="white-box"></div>
+<div id="transparent-box" style="height: 20px;"></div>
 <ul id="article-list"></ul>
+<div id="transparent-box" style="height: 20px;"></div>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
