--- a/themes/zen-theme/source/css/variable.css
+++ b/themes/zen-theme/source/css/variable.css
@@ -2,12 +2,12 @@
     --header-height: 60px;
     --header-content-width: 700px; 
     --index-header-height: 130px;
-    --footer-height: 40px;
+    --footer-height: 80px;
     --post-content-width: 700px; 
 }
 
 #white-box {
-    height: calc(var(--header-height) + 10px);
+    height: var(--header-height);
 }
 
 #white-footer-box {
@@ -22,6 +22,9 @@
     background-color: black;
 }
 
+#transparent-box {
+    opacity: 1;
+}
 
 @font-face {
     font-family: 'SourceHan';
