update post style

--- a/themes/zen-theme/layout/post.ejs
+++ b/themes/zen-theme/layout/post.ejs
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/css/post.css">
 
-<div style="opacity: 0; height: 80px; z-index: 10;"></div>
+<div id="white-box"></div>
+<div id="transparent-box" style="height: 20px;"></div>
 
 <div id="url-element"></div>
 
@@ -10,8 +11,6 @@
 	</div>
 	<%- page.content %>
 </div>
-
-<script src="https://threejs.org/build/three.js"></script>
 
 
 
