--- a/themes/zen-theme/source/css/game.css
+++ b/themes/zen-theme/source/css/game.css
@@ -1,135 +1,98 @@
 @import url(variable.css);
+
 html {
-    height: 100%;
+	height: 100%;
 }
 
-body{
-    margin: 0;
+body {
+	margin: 0;
 }
 
 #page-body {
-    width: 100%;
-    background-color: rgb(18, 18, 18);
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-bottom: 40px solid #000;
+	width: 100%;
+	background-color: rgb(18, 18, 18);
+	background-size: cover;
+	background-repeat: no-repeat;
+	border-bottom: 40px solid #000;
 }
 
 .content {
-    margin: 0 auto;
-    width: 1100px;
-    min-height: calc(100% - 40px);
-    background-color: rgb(18, 18, 18);
-    padding-bottom: 0px;
-    z-index: 1;
-    padding: 20px;
+	margin: 0 auto;
+	width: 1100px;
+	min-height: calc(100% - 40px);
+	background-color: rgb(18, 18, 18);
+	padding-bottom: 0px;
+	z-index: 1;
+	padding: 20px;
 }
 
 #page-title {
-    font-size: 28px;
-    color: black;
-    font-weight: bold;
-    font-family: 'SourceHan';
-    /* 其他样式属性 */
+	font-size: 28px;
+	color: black;
+	font-weight: bold;
+	font-family: 'SourceHan';
+	/* 其他样式属性 */
 }
 
 #page-content {
-    font-size: 16px;
-    color: black;
-    font-family: 'SourceHan';
-    /* 其他样式属性 */
+	font-size: 16px;
+	color: black;
+	font-family: 'SourceHan';
+	/* 其他样式属性 */
 }
 
-h2 {
-    font-size: 20px;
-}
 
-blockquote {
-    background-color: #f5f5f5;
-    border-left: 5px solid #999; 
-    margin: 0px;
-    padding: 10px;
-    padding-left: 15px;
-    font-weight: normal;
-}
-
-#page-footer {
-    position: sticky;
-    height: 80px;
-    text-align: center;
-    background-color: #bd2a21;
-    min-width: 100%;
-    background-size: cover;
-    border-radius: 0%; 
-    font-family: 'DarahRevolusi';
-}
-
-#time-box {
-    display: flex;
-    justify-content: center; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
-    height: 100%;
-}
-
-#page-footer-text {
-    margin: 0px;
-}
-
-#current-utc-time {
-    overflow: auto;
-    font-size: 30px;
-}
-
-header nav a {
-    margin-right: 10px;
-    text-decoration: none;
-    font-weight: normal;
-	display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header nav a:hover {
-    color: grey;
-}
 
 header {
-    background-color: white;
-    height: var(--header-height);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 9999; /* 可选，用于控制层级 */
+	font-family: 'SourceHan';
+	background-color: white;
+	height: var(--header-height);
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	/* 可选，用于控制层级 */
 }
 
 #header-content {
 	width: 1030px;
-    margin: 0 auto;
-    text-align: left;
-    top: 0;
-    opacity: 1; 
-    height: var(--header-height);
-    align-items: center;
-    display: flex;
-    background-color: white;
-    border-bottom: 10px solid black;
+	margin: 0 auto;
+	text-align: left;
+	top: 0;
+	opacity: 1;
+	height: var(--header-height);
+	align-items: center;
+	display: flex;
+	background-color: white;
 }
 
 
 .header-link {
-    display: inline-block;
-    margin-right: 10px;
-    text-decoration: none;
-    color:  black;
-    font-weight: bold;
-    font-size: 1.5em;
+	display: inline-block;
+	margin-right: 10px;
+	text-decoration: none;
+	color: black;
+}
+
+header nav a {
+	margin-right: 10px;
+	text-decoration: none;
+	font-weight: normal;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 1.5em;
+}
+
+header nav a:hover {
+	color: grey;
 }
 
 #game-title {
 	color: white;
 	font-family: 'SourceHan';
-    font-size: 2.5em;
+	font-size: 2.5em;
 	width: 1100px;
 	margin-left: 35px;
 	margin-bottom: 20px;
@@ -141,6 +104,13 @@ header {
 	font-family: 'SourceHan';
 	margin: 0 auto;
 	margin-bottom: 20px;
+}
+
+#game-info-box-row {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
 }
 
 img {
@@ -163,9 +133,3 @@ span {
 	color: white;
 }
 
-#game-info-box-row {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-}
