--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,10 @@
 @import url(variable.css);
+
 html {
     height: 100%;
 }
 
-body{
+body {
     margin: 0;
 }
 
@@ -17,80 +18,10 @@ body{
 
 .content {
     margin: 0 auto;
-    width: var(--post-content-width);
+    width: calc(var(--post-content-width) + 40px);
     min-height: calc(100% - 40px);
-    background-color: white;
     padding-bottom: 0px;
     z-index: 1;
-    padding: 20px;
-}
-
-#page-title {
-    font-size: 28px;
-    color: black;
-    font-weight: bold;
-    font-family: 'SourceHan';
-    /* 其他样式属性 */
-}
-
-#page-content {
-    font-size: 16px;
-    color: black;
-    font-family: 'SourceHan';
-    /* 其他样式属性 */
-}
-
-h2 {
-    font-size: 20px;
-}
-
-blockquote {
-    background-color: #f5f5f5;
-    border-left: 5px solid #999; 
-    margin: 0px;
-    padding: 10px;
-    padding-left: 15px;
-    font-weight: normal;
-}
-
-#page-footer {
-    position: sticky;
-    height: 80px;
-    text-align: center;
-    background-color: #bd2a21;
-    min-width: 100%;
-    background-size: cover;
-    border-radius: 0%; 
-    font-family: 'DarahRevolusi';
-}
-
-#time-box {
-    display: flex;
-    justify-content: center; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
-    height: 100%;
-}
-
-#page-footer-text {
-    margin: 0px;
-}
-
-#current-utc-time {
-    overflow: auto;
-    font-size: 30px;
-}
-
-header nav a {
-    margin-right: 10px;
-    text-decoration: none;
-    font-weight: normal;
-	display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header nav a:hover {
-    color: grey;
 }
 
 header {
@@ -100,7 +31,8 @@ header {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 9999; /* 可选，用于控制层级 */
+    z-index: 9999;
+    /* 可选，用于控制层级 */
 }
 
 #header-content {
@@ -108,66 +40,76 @@ header {
     margin: 0 auto;
     text-align: left;
     top: 0;
-    opacity: 1; 
     height: var(--header-height);
     align-items: center;
     display: flex;
     background-color: white;
-    border-bottom: 20px solid black;
 }
 
-
-.header-link {
-    display: inline-block;
+header nav a {
     margin-right: 10px;
-    text-decoration: none;
-    color:  black;
-    font-weight: bold;
+    display: inline-block;
+    align-items: center;
+    font-family: 'SourceHan';
+    font-weight: normal;
     font-size: 1.5em;
+    text-decoration: none;
+    color: black;
 }
-  
+
+header nav a:hover {
+    color: grey;
+}
+
+.page-content {
+    width: 100%;
+    height: calc(100% - var(--header-height) - 20px - 40px);
+    /* 或者适当的高度值 */
+    background-color: white;
+}
+
 .about-box {
-  width: 100%;
-  height: 70%; /* 或者适当的高度值 */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    border-top: white solid 60px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
 }
 
 .image-container {
-  position: relative;
-  text-align: center;
-  height: 250px;
-  width: 333.712px;
+    position: relative;
+    text-align: center;
+    height: 250px;
+    width: 333.712px;
 }
 
 .icon-link {
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
 }
 
 img {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 #personal-info {
-  width: 80%;
-  margin-top: 40px;
-  padding-left: 20px;
-      font-family: 'SourceHan';
+    width: 80%;
+    margin-top: 40px;
+    font-family: 'SourceHan';
 }
 
 .link-container {
-  display: flex;
-  border-top: 10px solid white;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    border-top: 10px solid white;
+    justify-content: center;
+    align-items: center;
 }
 
 .link-container a {
-  margin: 0 10px; /* 根据需要调整链接之间的间距 */
-      font-family: 'SourceHan';
+    margin: 0 10px;
+    /* 根据需要调整链接之间的间距 */
+    font-family: 'SourceHan';
 }
-
